FIXED Minor issues flgged by travis-ci tests (with apparently no symptoms) FIXED Hint text cound overflow out of the pop-up

--- a/frame_styles.css
+++ b/frame_styles.css
@@ -48,6 +48,8 @@ form{
 #masks-frame .frame-section{
     display: block;
     position: relative;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 #masks-frame .frame-title{
@@ -59,13 +61,13 @@ form{
 #masks-frame .frame-text{
     background-color: #f5f5f5;
     border: 1px solid #e3e3e3;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
     border-radius: 4px;
+    -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
     box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
     color: black;
-    -moz-border-radius: 4px;
-    -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
-    -webkit-border-radius: 4px;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
 }
 
 #masks-frame .frame-text{
