--- a/styles.css
+++ b/styles.css
@@ -184,7 +184,7 @@
 
 @media (max-width:420px){
     #masks .menu-bar-group .circle-label{
-        font-size: 14px !important;
+        font-size: 14px !important; /* csslint allow: important */
     }
 }
 
@@ -337,7 +337,9 @@
 
 #masks.page-hidden #masks-masks{
     background-color: #C0C0C0;
+    /* csslint ignore:start */
     background-image: url([[pix: mod_masks|hide_page]]);
+    /* csslint ignore:end */
     background-position: center 5%;
     background-repeat: no-repeat;
     opacity: 0.75;
@@ -540,7 +542,9 @@
 }
 
 #masks .mask-root.mask-deleted .masks-handle.m.c{
+    /* csslint ignore:start */
     background-image: url([[pix: i/invalid]]);
+    /* csslint ignore:end */
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
@@ -560,7 +564,7 @@
 #masks .selected-mask .masks-handle.b.r {
     background: #FFF;
     border: 1px rgba(0, 0, 0, 0.5) solid;
-    border-radius: 50% !important;
+    border-radius: 50%;
 }
 
 
